# heterofleet

./: LICENSE  README.md  main.py  pyproject.toml  setup.sh
docs/: BEGINNERS_GUIDE.md
examples/: search_rescue_mission.py
experiments/: __init__.py  base.py  communication.py  emergency.py  formation.py  scalability.py  task_allocation.py
heterofleet/: __init__.py
heterofleet/ai/: __init__.py  anomaly_detector.py  gnn_coordinator.py  llm_interpreter.py
heterofleet/communication/: __init__.py  protocol.py  routing.py
heterofleet/coordination/: __init__.py  friction.py  haim.py  priority.py  repulsion.py  self_drive.py
heterofleet/core/: __init__.py  agent.py  message.py  platform.py  state.py
heterofleet/digital_twin/: __init__.py  agent_twin.py  fleet_twin.py  mission_twin.py  synchronizer.py
heterofleet/hardware/: __init__.py  base.py  crazyflie.py  mentorpi.py
heterofleet/planning/: __init__.py  mopota.py  nsga3.py  scheduler.py  task.py
heterofleet/safety/: __init__.py  certificates.py  collision.py  distributed_filter.py  stl_monitor.py
heterofleet/simulation/: __init__.py  agent_sim.py  engine.py  environment.py
heterofleet/visualization/: __init__.py  dashboard.py  viewer.py
tutorials/: tutorial_01_hello.py  tutorial_02_multi_robot.py  tutorial_03_task_allocation.py  tutorial_04_digital_twins.py  tutorial_05_hardware.py
