[tool.poetry]
name = "heterofleet"
version = "1.0.0"
description = "A Digital Twin-Enabled Multi-Objective Coordination Framework for Heterogeneous Autonomous Vehicle Swarms"
authors = ["HeteroFleet Research Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "heterofleet"}]

[tool.poetry.dependencies]
python = "^3.10"

# Numerical Computing
numpy = "^1.24.0"
scipy = "^1.11.0"
jax = {version = "^0.4.20", extras = ["cpu"]}
jaxlib = "^0.4.20"

# Machine Learning
torch = "^2.1.0"
torch-geometric = "^2.4.0"
transformers = "^4.35.0"
openai = "^1.3.0"

# Simulation
pybullet = "^3.2.5"

# Visualization
pyvista = "^0.42.0"
plotly = "^5.18.0"
dash = "^2.14.0"
matplotlib = "^3.8.0"

# Communication
pyzmq = "^25.1.0"
asyncio-mqtt = "^0.16.0"

# Verification and Monitoring
# rtamt = "^0.3.0"  # STL runtime monitoring
z3-solver = "^4.12.0"

# Configuration and Serialization
pyyaml = "^6.0.1"
pydantic = "^2.5.0"
msgpack = "^1.0.7"

# Utilities
tqdm = "^4.66.0"
loguru = "^0.7.2"
rich = "^13.7.0"
typer = "^0.9.0"

# Crazyflie (optional)
cflib = {version = "^0.1.25", optional = true}

[tool.poetry.extras]
crazyflie = ["cflib"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.88.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = ["ANN101", "ANN102", "D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=heterofleet --cov-report=term-missing"
